Moved bundled javascript to dist, removed boiler plate

--- a/public/Demos/DissolveShader/index.html
+++ b/public/Demos/DissolveShader/index.html
@@ -12,6 +12,6 @@
 </head>
 <body>
 
-<script src="../../dissolveShader.bundle.js"></script>
+<script src="../../dist/dissolveShader.bundle.js"></script>
 </body>
 </html>
